# agent-stock-helper

./: .coderabbit.toml  README.md  stock-analysis-roadmap.md
backend/: main.py  pipeline.py  pyproject.toml  schema.json
backend/agent_modules/: analysis_agent.py  fundamentals_agent.py  risk_agent.py  sentiment_agent.py
backend/agent_modules/prompts/: fundamentals_agent.txt  risk_agent.txt  sentiment_agent.txt
backend/agents/: data_integrity.py
backend/mcp-servers/: finnhub-mcp.py  yfinance-mcp.py
backend/test/: conftest.py
backend/test/fixtures/: company_financials.json
backend/tests/: conftest.py  test_confidence-calculator.py  test_confidence_calculator.py  test_research_pack.py
backend/tests/_fixtures/: company_news.json  price_history.json
backend/tests/confidence_calculator/: conftest.py  test_confidence_calculator.py
backend/tests/fixtures/: company_info.json  company_news.json
backend/tests/research_pack/: conftest.py  test_research_pack.py
backend/utils/: confidence_calculator.py  research_pack.py  types.py
frontend/: .deepsource.toml  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: index.css  main.tsx  routeTree.gen.ts
frontend/src/components/landing-page/: agents-summary.tsx  hero.tsx  landing-page.tsx  report-summary.tsx  working-summary.tsx  workings.tsx
frontend/src/components/layout/: navbar-link.tsx  navbar.tsx
frontend/src/routes/: __root.tsx  about.tsx  contact.tsx  index.tsx  login.tsx  pricing.tsx  signup.tsx
(+1 files in other folders)
