[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.0",
    "finnhub-python>=2.4.27",
    "openai-agents>=0.14.1",
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
    "yfinance>=1.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]